// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic connectivity 1`] = `
Object {
  "code": "unrecognized action",
  "status": "neznámá akce: ",
}
`;

exports[`unknown action 1`] = `
Object {
  "code": "unrecognized action",
  "status": "neznámá akce: unknown",
}
`;

exports[`unparsable message 1`] = `
Object {
  "code": "unparseable message",
  "requestId": null,
}
`;
